@@ -247,8 +247,8 @@ var Parser = (function (scope) {
             var vars = [];
             for (var i = 0; i < L; i++) {
                 var item = this.tokens[i];
-                if (item.type_ === TVAR && (vars.indexOf(item.index_) == -1)
-                    && !(item.index_ in Parser.functions)) {
+                if (item.type_ === TVAR && (vars.indexOf(item.index_) == -1) &&
+                    !(item.index_ in Parser.functions)) {
                     vars.push(item.index_);
                 }
             }
@@ -721,6 +721,13 @@ var Parser = (function (scope) {
         return stra.replace(reg, r);
     }
 
+    function match(str, pattern) {
+        var stra, p;
+        stra = (str instanceof Array) ? str.join() : str;
+        p = (pattern instanceof Array) ? pattern.join() : pattern;
+        return stra.match(new RegExp(p));
+    }
+
     Parser.timeOffset = (new Date()).getTimezoneOffset();
 
     function DateInt(str) {
@@ -1038,6 +1045,7 @@ var Parser = (function (scope) {
             "indexof": indexof,
             "replace": replace,
             "substitute": substitute,
+            "match": match,
             "sin": Math.sin,
             "cos": Math.cos,
             "tan": Math.tan,
