@@ -22,7 +22,6 @@ Ver.5.3 (in development)
   in the Auth_Support directory.
 - The credential for authentication can be stored in the sessionStorage.
 - Utility methods, dateStringISO, dateStringFileMaker and timeString, are defined in INTERMediatorLib.
-- Add Dockerfile for CircleCI.
 - Be able to customize a style of the file uploading area when using the file upload component.
 - LDAPAuth class can report errors.
 - INTER-Mediator version can be described in the 'metadata.json' file, and dist-docs/build.sh
@@ -34,7 +33,9 @@ Ver.5.3 (in development)
 - The 'storing' key in 'authentication' in the second option parameter of IM_Entry function
   supports the 'session-storage' key, and it stores credentials into sessionStorage object.
 - Save NULL to the database when the user's input is empty via DataConverter_MySQLDateTime class.
+- Add match() in js-expression-eval-parser.js for the validation rules.
 - All header description of source files are updated, and build.sh was adapted them.
+- Add Dockerfile for CircleCI.
 - Update buster.js and package.json for unit testing.
 - [BUG FIX] Fix detection of params.php file.
 - [BUG FIX] Fix loading DB_TextFile class. The affected version is 5.2 only.
